--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
   "name": "meetanshi/magento-2-defer-parsing-javascript",
   "description": "Magento 2 DeferJS",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.3.0"
+    "php": ">5.5.0"
   },
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": [
     "OSL-3.0"
   ],
